# rust_mandarin_ocr

./: .gitignore  Cargo.toml  a.out  config.ini  decky_translate_demo.webm.mov  readme.md
src/: main.rs  ocr.rs  positioning_structs.rs  screen_access.rs  shader.wgsl  supported_languages.rs
