[package]
name = "decky_translate"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
graphicsmagick = "0.6.0"
leptess = "0.14.0"
clipboard = "0.5.0"
chinese_dictionary = "2.1.3"
winit = "0.28.3"
env_logger = "0.10"
log = "0.4"
wgpu = "0.15"
pollster = "0.2"
screenshots = "0.5.3"