[package]
name = "decky_translate"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.24.6"
tesseract = "0.13.0"
clipboard = "0.5.0"
chinese_dictionary = "2.1.3"
winit = "0.28.3"
env_logger = "0.10"
log = "0.4"
wgpu = "0.15"
wgpu_glyph = "0.19.0"
tokio = { version = "1.27.0", features = ["full"]}
screenshots = "0.5.3"
html_parser = "0.6.3"
bytemuck = "1.13.1"